<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:fontFamily="@font/poppins_semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:textSize="16sp"
        android:text="@string/submit_practice_song"
        android:layout_gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/inactive"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:maxLines="3"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/comment_for_session"
        android:inputType="textMultiLine|text"
        android:background="@drawable/edittext_bg"
        android:padding="15dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="15dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSubmit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:background="@drawable/rectangular_10_filled_coloraccent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:background="@drawable/rectangular_10_filled_white" />
    </LinearLayout>
</LinearLayout>